<resources>
    <string name="app_name">ReceiptInventory</string>

    <!-- menu_catalog.xml strings -->
    <string name="action_insert_dummy_data">Insert dummy data</string>
    <string name="action_delete_all_entries">Delete all entries</string>

    <string name="insert_dummy_data">Insert dummy data</string>

    <string name="delete_all_entries">Delete all entries</string>

    <!-- menu_editor.xml strings -->
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>
    <string name="action_sendmail">Send Mail</string>

    <!-- activity_editor.xml strings -->
    <string name="category_overview">Vendor</string>
    <string name="category_price">Cost</string>
    <string name="category_quantity">Visit</string>
    <string name="category_receipt_type">Receipt Type</string>
    <string name="category_image">Image</string>

    <string name="hint_receipt_name">Where Did You Spend?</string>
    <string name="hint_receipt_price">Approx. Amount Spent</string>
    <string name="hint_receipt_quantity">Visits</string>

    <!-- Title text for the empty view that prompts the user to add a receipt [CHAR LIMIT=50] -->
    <string name="empty_view_title_text">Get started by adding a receipt.</string>

    <string name="add_a_receipt">Add a Receipt</string>

    <!-- Title for the activity to edit an existing receipt [CHAR LIMIT=20] -->
    <string name="editor_activity_title_edit_receipt">Edit Receipt</string>

    <string name="hint_receipt_type"></string>

    <!-- Labels for drop-down menu -->
    <string name="receipt_type_lodging">Lodging</string>
    <string name="receipt_type_meals">Meals</string>
    <string name="receipt_type_transportation">Transportation</string>
    <string name="receipt_type_entertainment">Entertainment</string>
    <string name="receipt_type_unknown">Unknown</string>

    <!-- Label for the receipt's type if the type is unknown [CHAR LIMIT=20] -->
    <string name="unknown_receipt_type">Unknown Type</string>

    <string name="editor_activity_title_new_receipt">Add a Receipt</string>

    <string name="sale_button">Sale</string>

    <string name="add_image_button">Add Image</string>

    <string name="image_preview">Image Preview Here</string>

    <!-- Toast message in editor when new receipt has been successfully inserted [CHAR LIMIT=NONE] -->
    <string name="editor_insert_receipt_successful">Receipt saved</string>

    <!-- Toast message in editor when new receipt has been successfully inserted [CHAR LIMIT=NONE] -->
    <string name="editor_insert_receipt_failed">Error with saving receipt</string>

    <string name="editor_insert_receipt_failed_no_data">Error with saving receipt.
        Please enter information into relevant fields.</string>

    <!-- Toast message in editor when current receipt was successfully updated [CHAR LIMIT=NONE] -->
    <string name="editor_update_receipt_successful">Receipt updated</string>

    <!-- Toast message in editor when current receipt has failed to be updated [CHAR LIMIT=NONE] -->
    <string name="editor_update_receipt_failed">Error with updating receipt</string>

    <!-- Dialog message when user is leaving editor but hasn't saved changes [CHAR LIMIT=NONE] -->
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>

    <!-- Dialog button text for the option to discard a user's changes [CHAR LIMIT=20] -->
    <string name="discard">Discard</string>

    <!-- Dialog button text for the option to confirm deleting a receipt -->
    <string name="delete">Delete</string>

    <!-- Dialog message to ask the user to confirm deleting a single receipt [CHAR LIMIT=NONE] -->
    <string name="delete_dialog_msg">Delete this receipt?</string>

    <!-- Dialog button text for the option to cancel an action -->
    <string name="cancel">Cancel</string>

    <!-- Dialog button text for the option to keep editing the current receipt [CHAR LIMIT=20] -->
    <string name="keep_editing">Keep Editing</string>

    <!-- Order More Button-related strings -->
    <string name="order_more_button">Order More</string>
    <string name="email_subject">Order Another Receipt from </string>
    <string name="dear">Dear Sir or Madam:</string>
    <string name="email_message_body">We lost the original receipt and would like to request another copy.
        Please look up the order by the amount spent and the number of visits.</string>
    <string name="amount_spent">Amount Spent: $</string>
    <string name="number_of_visits">Number of Visits: </string>
    <string name="email_conclusion">Thank you for your assistance.</string>
    <string name="sincerely">Sincerely,</string>
    <string name="user_name">Lester Lie</string>

    <string name="quantity_cannot_be_negative">Quantity cannot be negative</string>

    <string name="editor_delete_receipt_failed">Error with deleting receipt</string>
    <string name="editor_delete_receipt_successful">Receipt deleted</string>

</resources>
