<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_margin"
    tools:context=".EditorActivity">

    <!-- Order More Button -->
    <Button
        android:id="@+id/order_more_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/small_margin"
        android:text="@string/order_more_button" />

    <!-- Overview category -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/CategoryStyle"
            android:text="@string/category_overview" />

        <!-- Input fields -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical"
            android:paddingLeft="4dp">

            <EditText
                android:id="@+id/edit_receipt_name"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_receipt_name"
                android:inputType="textCapWords" />

        </LinearLayout>
    </LinearLayout>

    <!-- Price category -->
    <LinearLayout
        android:id="@+id/container_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/CategoryStyle"
            android:hint="@string/category_price" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical"
            android:paddingLeft="4dp">

            <EditText
                android:id="@+id/edit_receipt_price"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_receipt_price"
                android:inputType="number" />
        </LinearLayout>

    </LinearLayout>

    <!-- Quantity category -->
    <LinearLayout
        android:id="@+id/container_quantity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/CategoryStyle"
            android:hint="@string/category_quantity" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical"
            android:paddingLeft="4dp">

            <EditText
                android:id="@+id/edit_receipt_quantity"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_receipt_quantity"
                android:inputType="number" />
        </LinearLayout>

    </LinearLayout>

    <!-- Type category -->
    <LinearLayout
        android:id="@+id/container_receipt_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:text="@string/category_receipt_type"
            style="@style/CategoryStyle"/>

        <!-- Input field -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical">

            <!-- Receipt type drop-down spinner -->
            <Spinner
                android:id="@+id/spinner_receipt_type"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:paddingRight="@dimen/activity_margin"
                android:spinnerMode="dropdown"/>
        </LinearLayout>

    </LinearLayout>
    <!-- Image category -->
    <LinearLayout
        android:id="@+id/container_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/CategoryStyle"
            android:hint="@string/category_image" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical"
            android:paddingLeft="@dimen/padding_left_indent">

            <Button
                android:id="@+id/add_image_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_image_button" />

        </LinearLayout>
    </LinearLayout>

    <TextView
        android:text="@string/image_preview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/activity_margin"/>

    <TextView
        android:id="@+id/image_uri"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/activity_margin"/>

    <ImageView
        android:id="@+id/image"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:scaleType="centerCrop"/>

</LinearLayout>